# PackageFlow

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README.zh-CN.md  README.zh-TW.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  update-homebrew.yml
ai_docs/: mcp-testing-spec.md  mcp-tools-sync-spec.md  ui-design-spec.md
crates/packageflow-lib/: Cargo.toml
crates/packageflow-mcp/: Cargo.toml
crates/specforge-mcp/: Cargo.toml
docs/: README.md  getting-started.md  security-and-privacy.md  troubleshooting.md
docs/features/: ai-integration.md  git-integration.md  keyboard-shortcuts.md  mcp-server.md  monorepo-support.md  one-click-deploy.md  one-click-scripts.md  project-management.md  security-audit.md  time-machine.md  toolchain-management.md  visual-workflow.md  webhooks.md  worktree-management.md
docs/superpowers/plans/: 2026-03-17-mcp-http-proxy.md  2026-03-17-readme-rewrite.md  2026-03-17-ui-redesign-minimalist-dark.md  2026-03-20-skillshare-app.md  2026-03-20-tauri-thin-shell.md
docs/zh-CN/: README.md  getting-started.md
docs/zh-CN/features/: ai-integration.md  git-integration.md  keyboard-shortcuts.md  mcp-server.md  monorepo-support.md  one-click-deploy.md  one-click-scripts.md  project-management.md  security-audit.md  toolchain-management.md  visual-workflow.md  webhooks.md  worktree-management.md
docs/zh-TW/: README.md  getting-started.md
docs/zh-TW/features/: ai-integration.md  git-integration.md  keyboard-shortcuts.md  mcp-server.md  monorepo-support.md  one-click-deploy.md  (+7 more)
scripts/: bump-version.sh  bump.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  ai_assistant.rs  ai_cli.rs  apk.rs  app.rs  cli.rs  config.rs  deploy.rs  file_watcher.rs  git.rs  incoming_webhook.rs  ipa.rs  mcp.rs  mod.rs  monorepo.rs  notification.rs  project.rs  script.rs  security.rs  server.rs  settings.rs  shortcuts.rs  snapshot.rs  step_template.rs  toolchain.rs  version.rs  webhook.rs  workflow.rs  worktree.rs
src-tauri/src/models/: ai.rs  ai_assistant.rs  app_state.rs  cli_tool.rs  config.rs  deploy.rs  incoming_webhook.rs  mcp.rs  mod.rs  project.rs  workflow.rs  worktree_sessions.rs
src-tauri/src/repositories/: ai_conversation_repo.rs  ai_repo.rs  deploy_repo.rs  mcp_repo.rs  mod.rs
src-tauri/src/services/: cli_manager.rs  config_service.rs  crypto.rs  file_watcher.rs  incoming_webhook.rs  mod.rs  notification.rs  project_store.rs  server_manager.rs  spec_service.rs
src-tauri/src/services/ai/: anthropic.rs  diff.rs  error.rs  gemini.rs  keychain.rs  lm_studio.rs  mod.rs  ollama.rs  openai.rs  storage.rs
src-tauri/src/services/ai_assistant/: background_process.rs  context_manager.rs  interactive.rs  mod.rs  process_manager.rs  prompt_builder.rs  sanitizer.rs  security.rs  service.rs  stream.rs  tools.rs
src-tauri/src/services/ai_cli/: detector.rs  executor.rs  mod.rs  security.rs
src-tauri/src/services/deploy/: error.rs  hash.rs  mod.rs  types.rs
src-tauri/src/services/deploy/cloudflare/: api.rs  mod.rs  types.rs
src-tauri/src/services/mcp_action/: script.rs  webhook.rs  workflow.rs
src-tauri/src/services/security_guardian/: mod.rs
src-tauri/src/services/snapshot/: capture.rs  diff.rs
src-tauri/src/utils/: database.rs  mod.rs  path_resolver.rs  schema.rs  shared_store.rs  store.rs
src/components/: EditDialog.tsx  Input.tsx  Layout.tsx  SegmentedControl.tsx
src/contexts/: SettingsContext.tsx  ThemeContext.tsx
src/data/: step-templates.ts
src/hooks/: useAICLI.ts  useAIChat.ts  useAIQuickActions.ts  useAISecurityAnalysis.ts  useAIService.ts  useBackgroundProcesses.ts  useBackgroundTasks.ts  useConversations.ts  useDeploy.ts  useDeployAccounts.ts  useDiff.ts  useIMEComposition.ts  useInputAutocomplete.ts  useInputHistory.ts  useMCPActions.ts  useMcpStatus.ts  useNotificationCenter.ts  useProject.ts  useProjectContext.ts  usePtySessions.ts  useScriptExecution.ts  useSecurityGuardian.ts  useSnapshots.ts  useSpecBranch.ts  useToolchainStrategy.ts  useUpdater.ts  useWorkflowStatus.ts  useWorktreeSessions.ts
src/lib/: export-import.ts  insight-helpers.ts  tauri-api.ts  theme-gradient.ts  workflow-storage.ts
src/types/: ai-assistant.ts  ai.ts  background-process.ts  deploy.ts  export-import.ts  index.ts  mcp-action.ts  mcp.ts  notification.ts  project.ts  settings-search.ts  settings.ts  snapshot.ts  step-template.ts  tauri.ts  toolchain.ts  workflow-phase.ts  worktree-sessions.ts
(+222 files in other folders)
